--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,129 @@
             </a>
         </nav>
     </header>
+    <main class="mt-6 max-w-4xl mx-auto p-4 bg-white rounded-md">
+        <section>
+            <h1 class="text-2xl text-slate-700 font-medium">Linux mirrors in Mauritius</h1>
+        </section>
+        <section>
+            <table class="mt-6 divide-y divide-gray-300">
+                <thead class="bg-gray-50">
+                    <tr>
+                    <th scope="col" class="py-3.5 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6 lg:pl-8"></th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Project</th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Description</th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"></th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"></th>
+                    </tr>
+                </thead>
+                <tbody class="divide-y divide-gray-200 bg-white">
+                    <!-- AlmaLinux starts -->
+                    <tr>
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                        <img src="/images/distro/almalinux.svg" class="w-20" />
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                        AlmaLinux
+                    </td>
+                    <td class="px-3 py-4 text-sm text-gray-500">
+                        An open source, community owned and governed, forever-free enterprise Linux distribution, focused on long-term stability, providing a robust production-grade platform. AlmaLinux OS is 1:1 binary compatible with RHEL® and pre-Stream CentOS.
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="http://almalinux-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="https://almalinux-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTPS
+                        </a>
+                    </td>
+                    </tr>
+                    <!-- AlmaLinux ends -->
+                    <!-- Fedora Linux starts -->
+                    <tr>
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                        <img src="/images/distro/fedora.svg" />
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                        Fedora
+                    </td>
+                    <td class="px-3 py-4 text-sm text-gray-500">
+                        The Fedora Project is a community of people working together to build a free and open source software platform and to collaborate on and share user-focused solutions built on that platform. Or, in plain English, we make an operating system and we make it easy for you to do useful stuff with it.
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="http://fedora-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="https://fedora-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTPS
+                        </a>
+                    </td>
+                    </tr>
+                    <!-- Fedora Linux ends -->
+                    <!-- openSUSE Linux starts -->
+                    <tr>
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                        <img src="/images/distro/opensuse.svg" />
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                        openSUSE
+                    </td>
+                    <td class="px-3 py-4 text-sm text-gray-500">
+                        The openSUSE distribution is a stable, easy to use and complete multi-purpose distribution.
+                        It is aimed towards users and developers working on the desktop or server. It is great for beginners, experienced users and ultra geeks alike, in short, it is perfect for everybody!
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="http://mirror.opensuse.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="https://mirror.opensuse.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    </tr>
+                    <!-- openSUSE Linux ends -->
+                    <!-- Ubuntu Linux starts -->
+                    <tr>
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                        <img src="/images/distro/ubuntu.svg" />
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                        Ubuntu
+                    </td>
+                    <td class="px-3 py-4 text-sm text-gray-500">
+                        Ubuntu is a Linux-based operating system. It is designed for computers, smartphones, and network servers. The system is developed by a UK based company called Canonical Ltd. All the principles used to develop the Ubuntu software are based on the principles of Open Source software development.
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="http://ubuntu-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="https://ubuntu-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTPS
+                        </a>
+                    </td>
+                    </tr>
+                    <!-- Ubuntu Linux ends -->
+                </tbody>
+                </table>
+        </section>
+    </main>
+    <footer class="mt-6 mb-8 p-4 max-w-4xl mx-auto bg-white rounded text-xs text-slate-700 flex flex-row">
+        <section class="w-1/2">
+            A project by Linux enthusiasts 🐧 in Mauritius. If you would like to contribute in improving the Linux experience on the island, read our <a href="https://github.com/ishwon/mirror.cloud.mu/blob/main/README.md" class="underline underline-offset-2 decoration-1 decoration-slate-500 hover:decoration-rose-600 transition hover:ease-in-out duration-300">manisfesto</a> and get in touch.
+        </section>
+        <section class="w-1/2 flex justify-end">
+            <a href="/index.html" class="flex flex-row gap-1 items-center">
+                <img src="/images/cloudmu-icon.svg" class="h-6" />
+                <img src="/images/cloudmu-logo.svg" class="h-3" />
+            </a>
+        </section>
+    </footer>
 </body>
 </html>
