Properly written openSUSE

--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
     </main>
     <footer class="mt-6 mb-8 p-4 max-w-4xl mx-auto bg-white rounded text-xs text-slate-700 flex flex-row">
         <section class="w-1/2">
-            A project by <a href="https://twitter.com/openSUSE_MU" class="underline underline-offset-2 decoration-1 decoration-slate-500 hover:decoration-rose-600 transition hover:ease-in-out duration-300">opensuse Mauritius</a>. If you would like to contribute in improving the Linux experience on the island, read our <a href="https://github.com/ishwon/mirror.cloud.mu/blob/main/README.md" class="underline underline-offset-2 decoration-1 decoration-slate-500 hover:decoration-rose-600 transition hover:ease-in-out duration-300">manifesto</a> and get in touch.
+            A project by <a href="https://twitter.com/openSUSE_MU" class="underline underline-offset-2 decoration-1 decoration-slate-500 hover:decoration-rose-600 transition hover:ease-in-out duration-300">openSUSE Mauritius</a>. If you would like to contribute in improving the Linux experience on the island, read our <a href="https://github.com/ishwon/mirror.cloud.mu/blob/main/README.md" class="underline underline-offset-2 decoration-1 decoration-slate-500 hover:decoration-rose-600 transition hover:ease-in-out duration-300">manifesto</a> and get in touch.
         </section>
         <section class="w-1/2 flex justify-end">
             <a href="/index.html" class="flex flex-row gap-1 items-center">
