HTTPS typo for openSUSE mirror fixed

--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
                     </td>
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
                         <a href="https://mirror.opensuse.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
-                            HTTP
+                            HTTPS
                         </a>
                     </td>
                     </tr>
