Added Linux Mint mirror

--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,29 @@
                     </td>
                     </tr>
                     <!-- Fedora Linux ends -->
+                    <!-- Linux Mint starts -->
+                    <tr>
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                        <img src="/images/distro/linuxmint.svg" />
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                        Linux Mint
+                    </td>
+                    <td class="px-3 py-4 text-sm text-gray-500">
+                        Linux Mint is an operating system for desktop and laptop computers. It is designed to work 'out of the box' and comes fully equipped with the apps most people need. It is based on Ubuntu LTS and has a Debian spin called <a href="https://linuxmint-mirror.cloud.mu/iso/debian/" class="underline underline-offset-2 decoration-1 decoration-slate-500 hover:decoration-rose-600 transition hover:ease-in-out duration-300">LMDE</a>.
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="http://linuxmint-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="https://linuxmint-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTPS
+                        </a>
+                    </td>
+                    </tr>
+                    <!-- Linux Mint ends -->
                     <!-- openSUSE Linux starts -->
                     <tr>
                     <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
