Added Debian mirror

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                 <tbody class="divide-y divide-gray-200 bg-white">
                     <!-- AlmaLinux starts -->
                     <tr>
-                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
                         <img src="/images/distro/almalinux.svg" class="w-20" />
                     </td>
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
@@ -84,10 +84,33 @@
                     </td>
                     </tr>
                     <!-- AlmaLinux ends -->
-                    <!-- Fedora Linux starts -->
+                    <!-- Debian starts -->
                     <tr>
-                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
-                        <img src="/images/distro/fedora.svg" />
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
+                        <img src="/images/distro/debian.svg" class="h-20" />
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                        Debian
+                    </td>
+                    <td class="px-3 py-4 text-sm text-gray-500">
+                        Debian is a Linux-based operating system for a wide range of devices including laptops, desktops and servers. Most hardware is supported by the Linux kernel which means that Debian will support it as well. Proprietary drivers for hardware are available if necessary.
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="http://debian-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="https://debian-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTPS
+                        </a>
+                    </td>
+                    </tr>
+                    <!-- Debian ends -->
+                    <!-- Fedora starts -->
+                    <tr>
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
+                        <img src="/images/distro/fedora.svg" class="h-[76px]" />
                     </td>
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
                         Fedora
@@ -106,11 +129,11 @@
                         </a>
                     </td>
                     </tr>
-                    <!-- Fedora Linux ends -->
+                    <!-- Fedora ends -->
                     <!-- Linux Mint starts -->
                     <tr>
-                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
-                        <img src="/images/distro/linuxmint.svg" />
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
+                        <img src="/images/distro/linuxmint.svg" class="h-20" />
                     </td>
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
                         Linux Mint
@@ -130,9 +153,9 @@
                     </td>
                     </tr>
                     <!-- Linux Mint ends -->
-                    <!-- openSUSE Linux starts -->
+                    <!-- openSUSE starts -->
                     <tr>
-                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
                         <img src="/images/distro/opensuse.svg" />
                     </td>
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
@@ -153,11 +176,11 @@
                         </a>
                     </td>
                     </tr>
-                    <!-- openSUSE Linux ends -->
-                    <!-- Ubuntu Linux starts -->
+                    <!-- openSUSE ends -->
+                    <!-- Ubuntu starts -->
                     <tr>
-                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
-                        <img src="/images/distro/ubuntu.svg" />
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
+                        <img src="/images/distro/ubuntu.svg" class="h-[88px]" />
                     </td>
                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
                         Ubuntu
@@ -176,7 +199,7 @@
                         </a>
                     </td>
                     </tr>
-                    <!-- Ubuntu Linux ends -->
+                    <!-- Ubuntu ends -->
                 </tbody>
                 </table>
         </section>
