Added Arch Linux mirror details

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,31 @@
                     </td>
                     </tr>
                     <!-- AlmaLinux ends -->
+
+                    <!-- Arch Linux starts -->
+                    <tr>
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                        <img src="/images/distro/archlinux.png" class="w-24" />
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                        Arch Linux
+                    </td>
+                    <td class="px-3 py-4 text-sm text-gray-500">
+                        Arch Linux is an independently developed, x86-64 general-purpose GNU/Linux distribution that strives to provide the latest stable versions of most software by following a rolling-release model. 
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="http://archlinux-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="https://archlinux-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTPS
+                        </a>
+                    </td>
+                    </tr>
+                    <!-- Arch Linux ends -->
+
                     <!-- Debian starts -->
                     <tr>
                     <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
