Add Manjaro Linux mirror details

--- a/public/index.html
+++ b/public/index.html
@@ -178,6 +178,29 @@
                     </td>
                     </tr>
                     <!-- Linux Mint ends -->
+                    <!-- Manjaro Linux starts -->
+                    <tr>
+                    <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                        <img src="/images/distro/manjarolinux.png" class="w-24" />
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                        manjaro Linux
+                    </td>
+                    <td class="px-3 py-4 text-sm text-gray-500">
+                        Manjaro is an Arch-based Linux operating system that has a focus on user-friendliness and accessibility.
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="http://manjarolinux-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTP
+                        </a>
+                    </td>
+                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                        <a href="https://manjarolinux-mirror.cloud.mu" class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                            HTTPS
+                        </a>
+                    </td>
+                    </tr>
+                    <!-- Manjaro Linux ends -->
                     <!-- openSUSE starts -->
                     <tr>
                     <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
