--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,9 @@
                     <tr>
                         <td
                             class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
-                            <img src="/images/distro/fedora.svg" class="h-[76px]" />
+                            <div class="grid place-items-center">
+                                <img src="/images/distro/fedora.svg" class="h-[76px]" />
+                            </div>
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
                             Fedora
@@ -165,8 +167,7 @@
                         <td class="px-3 py-4 text-sm text-gray-500">
                             The Fedora Project is a community of people working together to build a free and open source
                             software platform and to collaborate on and share user-focused solutions built on that
-                            platform. Or, in plain English, we make an operating system and we make it easy for you to
-                            do useful stuff with it.
+                            platform.
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
                             <a href="http://fedora-mirror.cloud.mu"
@@ -215,7 +216,9 @@
                     <!-- Manjaro Linux starts -->
                     <tr>
                         <td class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
-                            <img src="/images/distro/manjarolinux.png" class="w-24" />
+                            <div class="grid place-items-center">
+                                <img src="/images/distro/manjarolinux.png" class="w-16" />
+                            </div>
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
                             Manjaro Linux
@@ -242,15 +245,16 @@
                     <tr>
                         <td
                             class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
-                            <img src="/images/distro/opensuse.svg" />
+                            <div class="grid place-items-center">
+                                <img src="/images/distro/opensuse.svg" />
+                            </div>
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
                             openSUSE
                         </td>
                         <td class="px-3 py-4 text-sm text-gray-500">
                             The openSUSE distribution is a stable, easy to use and complete multi-purpose distribution.
-                            It is aimed towards users and developers working on the desktop or server. It is great for
-                            beginners, experienced users and ultra geeks alike, in short, it is perfect for everybody!
+                            It is aimed towards users and developers working on the desktop or server.
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
                             <a href="http://mirror.opensuse.mu"
@@ -277,9 +281,7 @@
                         </td>
                         <td class="px-3 py-4 text-sm text-gray-500">
                             Ubuntu is a Linux-based operating system. It is designed for computers, smartphones, and
-                            network servers. The system is developed by a UK based company called Canonical Ltd. All the
-                            principles used to develop the Ubuntu software are based on the principles of Open Source
-                            software development.
+                            network servers. The system is developed by a UK based company called Canonical Ltd.
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
                             <a href="http://ubuntu-mirror.cloud.mu"
