--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,36 @@
                         </td>
                     </tr>
                     <!-- Debian ends -->
+
+                    <!-- EndeavourOS starts -->
+                    <tr>
+                        <td
+                            class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
+                            <img src="/images/distro/debian.svg" class="h-20" />
+                        </td>
+                        <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
+                            Debian
+                        </td>
+                        <td class="px-3 py-4 text-sm text-gray-500">
+                          EndeavourOS is a Linux distribution based on Arch Linux. 
+                          EndeavourOS features the graphical Calamares installer capable of installing the Xfce, Budgie, 
+                          Cinnamon, GNOME, i3, KDE Plasma 5, LXQt, and MATE desktop environments, the former of 
+                          which can be installed without an Internet connection.
+                        </td>
+                        <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                            <a href="http://debian-mirror.cloud.mu"
+                                class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                                HTTP
+                            </a>
+                        </td>
+                        <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                            <a href="https://debian-mirror.cloud.mu"
+                                class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
+                                HTTPS
+                            </a>
+                        </td>
+                    </tr>
+                    <!-- Debian ends -->
                     <!-- Fedora starts -->
                     <tr>
                         <td
