--- a/public/index.html
+++ b/public/index.html
@@ -158,10 +158,10 @@
                     <tr>
                         <td
                             class="whitespace-nowrap py-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8 grid place-items-center">
-                            <img src="/images/distro/debian.svg" class="h-20" />
+                            <img src="/images/distro/endeavouros.png" class="h-20" />
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
-                            Debian
+                            endeavourOS
                         </td>
                         <td class="px-3 py-4 text-sm text-gray-500">
                           EndeavourOS is a Linux distribution based on Arch Linux. 
@@ -170,19 +170,19 @@
                           which can be installed without an Internet connection.
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
-                            <a href="http://debian-mirror.cloud.mu"
+                            <a href="http://endeavouros-mirror.cloud.mu"
                                 class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
                                 HTTP
                             </a>
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
-                            <a href="https://debian-mirror.cloud.mu"
+                            <a href="https://endeavouros-mirror.cloud.mu"
                                 class="font-medium text-sky-600 hover:underline hover:decoration-1 hover:underline hover:underline-offset-4 hover:decoration-rose-600">
                                 HTTPS
                             </a>
                         </td>
                     </tr>
-                    <!-- Debian ends -->
+                    <!-- EndeavourOS ends -->
                     <!-- Fedora starts -->
                     <tr>
                         <td
