--- a/public/index.html
+++ b/public/index.html
@@ -161,13 +161,14 @@
                             <img src="/images/distro/endeavouros.png" class="h-20" />
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 font-medium">
-                            endeavourOS
+                            EndeavourOS
                         </td>
                         <td class="px-3 py-4 text-sm text-gray-500">
-                          EndeavourOS is a Linux distribution based on Arch Linux. 
-                          EndeavourOS features the graphical Calamares installer capable of installing the Xfce, Budgie, 
-                          Cinnamon, GNOME, i3, KDE Plasma 5, LXQt, and MATE desktop environments, the former of 
-                          which can be installed without an Internet connection.
+                            EndeavourOS is a Linux distribution based on Arch Linux.
+                            EndeavourOS features the graphical Calamares installer capable of installing the Xfce,
+                            Budgie,
+                            Cinnamon, GNOME, i3, KDE Plasma 5, LXQt, and MATE desktop environments, the former of
+                            which can be installed without an Internet connection.
                         </td>
                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
                             <a href="http://endeavouros-mirror.cloud.mu"
